Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -677,21 +677,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-26-6b04ae1c5748>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-6b04ae1c5748>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    = 'Liz Kaplan'\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Liz Kaplan'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "name\n",
-    "= 'Liz Kaplan'\n",
+    "name = 'Liz Kaplan'\n",
     "name"
    ]
   },
